--- a/views/class-details.ejs
+++ b/views/class-details.ejs
@@ -199,7 +199,9 @@
                         <button type="submit">Create Attendance Report</button>
                     </form>
                 </ul>
-
+                <br>
+                <h2>Add Task:</h2>
+                <br>
                 <!-- Form to add a new task -->
                 <form action="/teachers/create-task/<%= classInfo._id %>" method="post">
                     <label for="description">Task Description:</label>
