--- a/views/edit-task.ejs
+++ b/views/edit-task.ejs
@@ -50,7 +50,7 @@
         <input type="hidden" name="classId" value="<%= task.class %>">
         <button type="submit">Update Task</button>
     </form>
-    <button onclick="window.location.href='/teachers/manage-tasks/<%= task.class %>'">Back to Task Management</button>
+    <button class="back-button"onclick="window.location.href='/teachers/manage-tasks/<%= task.class %>'">Back to Task Management</button>
     </div>
     </div>
 </body>
