--- a/views/class-attendance-report.ejs
+++ b/views/class-attendance-report.ejs
@@ -116,7 +116,7 @@
                     <canvas id="attendanceChart"></canvas>
                 </div>
                 <p>Your Attendance Percentage: <b><%= studentAttendancePercentage %> %</b></p>
-                <p>Class Average Attendance Percentage: <b><%= totalAttendancePercentage %> %</b></p>
+                <p>Class Attendance Percentage: <b><%= totalAttendancePercentage %> %</b></p>
                 <a href="/students/student-class-details/<%= classId %>">Back to Class Details</a>
             </div>
         </div>
