--- a/views/student-attendance-report.ejs
+++ b/views/student-attendance-report.ejs
@@ -114,7 +114,7 @@
                 <div class="chart-container">
                     <canvas id="attendanceChart"></canvas>
                 </div>
-                <p>Average Attendance Percentage: <b> <%= averageAttendancePercentage %> %</b></p>
+                <p>Average Attendance: <b> <%= averageAttendancePercentage %> %</b></p>
                 <a href="/students/student-dashboard">Back to Dashboard</a>
             </div>
         </div>
