--- a/views/edit-class.ejs
+++ b/views/edit-class.ejs
@@ -127,7 +127,7 @@
         <%- include('_navbar2', { userRole: userRole }) %>
         <div class="main_container">
             <div class="edit-class-container">
-                <h1>Edit Class: <%= classInfo.name %></h1>
+                <h1>Edit Class: </h1>
                 <form id="classForm" method="post" action="/teachers/edit-class/<%= classInfo._id %>">
                     <label for="name">Class Name:</label>
                     <input type="text" id="name" name="name" value="<%= classInfo.name %>" required>
