--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,16 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="/css/navbar.css">
+    <style>
+        .message {
+            margin-top: 10px;
+            padding: 10px;
+            border-radius: 5px;
+        }
+        .message.error {
+            background-color: #f8d7da;
+            color: #721c24;
+        }
+        .message.success {
+            background-color: #d4edda;
+            color: #155724;
+        }
+    </style>
 </head>
 <body>
     <div class="wrapper">
         <div class="main_container">
             <h1>Login</h1>
+            
             <form action="/users/login" method="post">
                 <input type="text" name="username" placeholder="Username" required>
                 <input type="password" name="password" placeholder="Password" required>
                 <button type="submit">Login</button>
             </form>
+            <% if (typeof message !== 'undefined' && message.trim()) { %>
+                <div class="message <%= messageType %>"><%= message %></div>
+            <% } %>
         </div>
     </div>
 </body>
